<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="enter_index">开始体验</string>
    <string name="app_name">研讯</string>
    <string name="login_page">登录</string>
    <string name="history">历史消息</string>
    <string name="user_valid_success">登陆成功</string>
    <string name="user_valid_failed">用户名不存在/密码错误</string>
    <string name="no_account">请输入用户名</string>
    <string name="no_password">请输入密码</string>
    <string name="user_register_success">注册成功</string>
    <string name="user_register_failed">该用户名已存在</string>
    <string name="hello">Hello Android, DemoAppActivity!</string>
    <string name="settings">设置</string>
    <string name="setTags">设置兴趣标签</string>
    <string name="username">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="uploadportrait">上传头像</string>
    <string name="delete">删除消息</string>

    <string name="cancel">取消</string>
    <string name="histories">历史消息</string>
    <string name="targetSchool">目标院校</string>
    <string name="major">专业  </string>
    <string name="enable_push">开启推送</string>
    <string name="disable_push">关闭推送</string>
    <string name="main_page">主页</string>
    <string name="ok">ok</string>
    <string name="notification_detail">消息详情</string>
    <string name="changeMenu">切换菜单</string>
    <string name="student_resource">考生来源</string>
    <string name="exam_type">考试方式</string>
    <string name="exam_default_type">全国统考</string>
    <string name="default_resource">全日制应届本科毕业生</string>
    <string name="submit">提交修改</string>
    <string name="english">英语</string>
    <string name="english_default">英语一</string>
    <string name="professional_course1">专业课一</string>
    <string name="professional_course2">专业课二</string>
    <string name="professional_course_tip">请输入考研科目编号</string>
    <string name="modify_success">修改成功</string>

    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>

    <string name="filter">筛选</string>
    <string name="tag">关键词</string>


    <string name="personset">个人设置</string>
    <string name="about">关于</string>
    <string name="pushset">消息设置</string>
    <string name="switchuser">切换用户</string>
    <string name="exit">退出</string>
    <string name="support">点赞</string>
    <string name="comment">评论</string>
    <string name="no_comment">暂无评论，来抢沙发</string>
    <string name="hasSupport">已点赞</string>
    <string name="comment_success">评论成功</string>


</resources>
