<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <org.androidpn.view.SlidingMenu
            android:id="@+id/sliding_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
        >
            <include layout="@layout/left_menu"></include>
            <!--主布局-->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
            >
                <Button
                        android:onClick="toggleMenu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/changeMenu"
                />
                <Button
                        android:id="@+id/btn_histories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/histories">
                </Button>
                <Button
                        android:id="@+id/btn_settings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings">
                </Button>
            </LinearLayout>

        </LinearLayout>
    </org.androidpn.view.SlidingMenu>
</RelativeLayout>