<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/background"

>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/icImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:orientation="vertical" >
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
    >

    <EditText
            android:id="@+id/edit_re_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:hint="@string/username"
            android:ems="18"
            android:drawableLeft="@drawable/icon_username"
            android:drawablePadding="5dp"
            android:background="@drawable/white_input_background"
    />
        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="20dp"
                   android:src="@drawable/icon_del"
                   android:background="@drawable/white_input_background"
                   android:visibility="invisible"
                   android:id="@+id/iv_register_username"
        />

    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
    >
    <EditText
            android:id="@+id/edit_re_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:ems="18"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/icon_password"
            android:drawablePadding="5dp"
            android:background="@drawable/white_input_background"
    />
        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="20dp"
                   android:src="@drawable/icon_del"
                   android:background="@drawable/white_input_background"
                   android:visibility="invisible"
                   android:id="@+id/iv_register_pwd"
        />
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
        >
            <Button
            android:id="@+id/btn_re_register"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_round"
            android:text="@string/register"
            android:textSize="20sp"
            />
            <Button
                    android:id="@+id/btn_re_cancel"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/btn_round"
                    android:text="@string/cancel"
                    android:textSize="20sp"
            />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>