<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
              android:layout_height="match_parent"
                android:background="@drawable/background"
>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginTop="40dp"
                  android:layout_marginLeft="20dp"
    >
        <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/icon_portrait"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="^Sparkle"
                android:textSize="32sp"
        />

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
    >
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        >
            <ImageView
                    android:id="@+id/iv_personset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/icon_user"
                    android:layout_centerVertical="true"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/personset"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/iv_personset"
                    android:layout_marginLeft="20dp"
            />
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
        >
            <ImageView
                    android:id="@+id/iv_inforset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/icon_infroset"
                    android:layout_centerVertical="true"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/pushset"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/iv_inforset"
                    android:layout_marginLeft="20dp"
            />
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
        >
            <ImageView
                    android:id="@+id/iv_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/icon_about"
                    android:layout_centerVertical="true"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/about"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/iv_about"
                    android:layout_marginLeft="20dp"
            />
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
        >
            <ImageView
                    android:id="@+id/iv_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/icon_logout"
                    android:layout_centerVertical="true"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/exit"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/iv_logout"
                    android:layout_marginLeft="20dp"
            />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>